# CMython

./: CMakeLists.txt  README.md  main.cpp
A/: script.py
